@@ -1,10 +1,12 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -20,11 +22,24 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+package com.sun.source.tree;
 
-// key: compiler.misc.feature.unnamed.variables
-// key: compiler.warn.preview.feature.use.plural
-// options: --enable-preview -source ${jdk.version} -Xlint:preview
+import jdk.internal.javac.PreviewFeature;
 
-public class UnderscoreInLambdaExpression {
-    java.util.function.Function<String,String> f = _ -> "x";
+/**
+ * A tree node for a binding pattern that matches a pattern
+ * with a variable of any name and a type of the match candidate;
+ * an unnamed pattern.
+ *
+ * For example the use of underscore {@code _} below:
+ * <pre>
+ *   if (r instanceof R(_)) {}
+ * </pre>
+ *
+ * @jls 14.30.1 Kinds of Patterns
+ *
+ * @since 21
+ */
+@PreviewFeature(feature=PreviewFeature.Feature.UNNAMED)
+public interface AnyPatternTree extends PatternTree {
 }
